--- a/style.css
+++ b/style.css
@@ -33,3 +33,26 @@ nav {
     text-decoration: none;
     color: #3A3A3A;
 }
+.banner {
+    display: flex;
+    margin-top: 50px;
+}
+.banner-left h2 {
+    font-size: 52px;
+    color: #3A3A3A;
+}
+.banner-left p {
+    color: #3A3A3A;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 24px 0px;
+}
+
+button {
+    background-color: #E02C6D;
+    color: #ffffff;
+    border-radius: 41px;
+    padding: 10px 24px;
+    border: 0;
+    font-weight:bold;
+}
