--- a/style.css
+++ b/style.css
@@ -48,26 +48,106 @@ nav {
   margin: 24px 0px;
 }
 
-button {
+.btn {
   background-color: #e02c6d;
-  color: #ffffff;
-  border-radius: 41px;
-  padding: 10px 24px;
-  border: 0;
+  border: none;
+  color: white;
+  padding: 10px 16px;
+  border-radius: 40px;
   font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
 }
 .company-logo {
-    display: flex;
-    justify-content: space-evenly;
-    border: 1px solid #e5e5e5;
-    margin: 80px 0px;
-    padding: 20px 0px;
+  display: flex;
+  justify-content: space-evenly;
+  border: 1px solid #e5e5e5;
+  margin: 80px 0px;
+  padding: 20px 0px;
 }
 .company-logo img {
   width: 55.05px;
   height: 31.06px;
 }
 .logo-container {
-    max-width: 1052px;
-    margin: 0 auto;
+  max-width: 1052px;
+  margin: 0 auto;
+}
+.collection {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.collection-title {
+  color: #3a3a3a;
+  text-align: center;
+}
+.products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  justify-content: center;
+  margin-top: 50px;
+}
+.product {
+  width: 329px;
+  height: 476px;
+  background: #ffffff;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  padding: 11px;
+  padding-bottom: 30px;
+}
+.product-name {
+  color: #18191f;
+  font-size: 28px;
+  font-weight: 500;
+  margin: 7px 0px;
+}
+.product-price {
+  color: rgba(0, 0, 0, 0.87);
+  font-size: 24px;
+  font-weight: 400;
+  margin: 7px 0px;
+}
+.product-img img {
+  width: 100%;
+}
+.product-rate-icon {
+  color: #fb8200;
+}
+.product-info {
+  color: #787885;
+  margin: 5px 0px;
+}
+.rate-number {
+  color: #5e6366;
+  margin-left: 5px;
+}
+.more-product {
+  float: right;
+  margin-top: 20px;
+  margin-right: -58px;
+  color: #e02c6d;
+  cursor: pointer;
+  font-weight: bold;
+}
+footer {
+  text-align: center;
+  margin-top: 80px;
+  background-color: #0a0826;
+  color: #ffffff;
+  padding: 30px 0;
+  height: 150px;
+}
+footer small {
+  color: #d9dbe1;
+}
+.social-link i {
+  margin: 30px 10px;
+  font-size: 17px;
+  cursor: pointer;
+}
+.news-card img {
+  width: 400px;
+  height: 300;
 }
