--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@ footer small {
   margin-top: 108px;
 }
 .support-title {
-  font-size: 30px;
   font-weight: 300;
   color: #787885;
 }
@@ -185,4 +184,60 @@ footer small {
 }
 .support {
   padding: 50px;
+}
+
+/* Responsive */
+
+@media (max-width: 800px) {
+  .banner {
+    display: flex;
+    flex-direction: column-reverse;
+    row-gap: 20px;
+    margin-left: 155px;
+  }
+  .products {
+    display: grid;
+    margin: 0 26px;
+    grid-template-columns: 1fr 1fr;
+  }
+  .more-product {
+    float: left;
+    margin-left: 26px;
+  }
+}
+@media (max-width: 550px) {
+  .menu-bar {
+    display: none;
+  }
+  .banner {
+    margin-left: 64px;
+  }
+  .banner-left {
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+  .company-logo {
+    margin: 0 auto;
+    justify-content: center;
+    border: 0;
+  }
+  .company-logo img {
+    margin: 64px 0;
+    justify-content: center;
+    border: 0;
+  }
+  .products {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+  }
+  .more-product {
+        margin-left: 99px;
+  }
+  .explore {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
